<resources>
    <string name="app_name">Personas</string>
    <string name="agregar">Agregar</string>
    <string name="cedula">Cedula</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="guardar">Guardar</string>
    <string name="limpiar">Limpiar</string>
    <string name="Numero">No</string>
    <string name="crear">Crear Personas</string>
    <string name="listar">Listar Personas</string>
    <array name="Opciones">
        <item>@string/crear</item>
        <item>@string/listar</item>
    </array>
    <string name="mensaje_exitoso">Persona Guardada Exitosamente</string>
</resources>
